<resources>
    <string name="app_name">반갑개</string>
    <string name="dog_small">소형견</string>
    <string name="dog_medium">중형견</string>
    <string name="dog_large">대형견</string>
    <string name="dog_gender_female">암컷</string>
    <string name="dog_gender_male">수컷</string>
    <string name="dog_gender_female_neutered">중성화 암컷</string>
    <string name="dog_gender_male_neutered">중성화 수컷</string>
    <string name="register_now">간편하게 로그인 할래요</string>
    <string name="profile_setting_nickname">닉네임</string>
    <string name="profile_setting_nickname_hint">사용자 닉네임을 입력해주세요</string>
    <string name="profile_setting_profile_pic">프로필 사진</string>
    <string name="make_profile_title">프로필 만들기</string>
    <string name="make_profile_edit_title">프로필 수정하기</string>
    <string name="make_profile_edit_btn_title">선택 완료!</string>
    <string name="user_name_length">%d/8</string>
    <string name="edit_profile_title">프로필 편집</string>
    <string name="register_dog_title">등록하기</string>
    <string name="empty_pet_description">등록하기를 통해 강아지를 추가해주세요</string>
    <string name="user_name_tag">#%s</string>
    <string name="pet_small_size_title">소형견이에요</string>
    <string name="pet_medium_size_title">중형견이에요</string>
    <string name="pet_large_size_title">대형견이에요</string>
    <string name="pet_months_format">(%d개월)</string>
    <string name="pet_age_format">(%d살)</string>
    <string name="pet_gender_title">성별</string>
    <string name="pet_size_title">크기</string>
    <string name="pet_description_title">소개</string>
    <string name="caliber">구경하기</string>
    <string name="mypage_title">나의 강아지</string>
    <string name="my_activities">내 활동</string>
    <string name="participation">내가 참여중인 모임</string>
    <string name="club_manager">내가 방장인 모임</string>
    <string name="pets_profile">함께하는 강아지</string>
    <string name="tv_pet_add">강아지를 등록해주세요</string>
    <string name="recent_pet">최근 본 강아지</string>
    <string name="neuterd_status">중성화를 했어요</string>
    <string name="small_pet_description">소형견이에요</string>
    <string name="medium_pet_description">중형견이에요</string>
    <string name="large_pet_description">대형견이에요</string>
    <string name="empty_other_pet">함께하는 강아자가 없어요</string>
    <string name="close">취소</string>
    <string name="report">신고하기</string>
    <string name="user_declare">차단하기</string>
    <string name="user_block_title">이 유저를 차단할까요?</string>
    <string name="user_block_description">앞으로 이 유저의 정보를 볼 수 없어요</string>
    <string name="user_block_yes">차단하기</string>
    <string name="user_block_no">닫기</string>
    <string name="user_block_message">유저를 차단했어요</string>
    <string name="user_report_title">신고하기</string>
    <string name="user_report_one">스팸 및 도배 내용</string>
    <string name="user_report_two">광고 및 홍보 내용</string>
    <string name="user_report_three">음란물 또는 성적인 내용</string>
    <string name="user_report_fourth">개인정보 노출</string>
    <string name="user_report_five">기타</string>
    <string name="user_report_edit_hint">직접 작성하기</string>
    <string name="user_report_save">신고하기</string>
    <string name="user_report_message">유저를 신고했어요</string>
    <string name="club_report_message">모임을 신고했어요</string>
    <string name="alarm_settings_total_push">반갑개에서 보내는 소식</string>
    <string name="alarm_settings_total_push_description">반갑개의 유용한 정보나 이벤트 알림</string>
    <string name="alarm_settings_chatting_push">모든 채팅 알림</string>
    <string name="alarm_settings_chatting_push_description">모든 채팅 메시지 알림</string>
    <string name="alarm_settings_club_push">모임 알림</string>
    <string name="alarm_settings_club_push_description">가입한 모임의 알림</string>
    <string name="alarm_settings_playground_push">놀이터 알림</string>
    <string name="alarm_settings_playground_push_description">다른 강아지의 놀이터 참여 여부 알림</string>
    <string name="setting">설정</string>
    <string name="unsubscribe">탈퇴하기</string>
    <string name="logout">로그아웃</string>
    <string name="privacy_policy">개인정보처리방침</string>
    <string name="app_info">앱 정보</string>
    <string name="etc">기타</string>
    <string name="logout_title">로그아웃 하시겠어요?</string>
    <string name="logout_description">언제든 다시 돌아올 수 있어요!</string>
    <string name="no">아니요</string>
    <string name="user_delete_title">정말 탈퇴하시겠어요?</string>
    <string name="user_delete_description">탈퇴시 사용자 정보와\n채팅 메세지가 사라져요.</string>
    <string name="user_delete_yes">회원 탈퇴</string>
    <string name="dialog_positive_default">네</string>
    <string name="dialog_negative_default">아니오</string>
    <string name="pet_name_title">강아지 이름</string>
    <string name="register_pet_toolbar_title">강아지 등록하기</string>
    <string name="patch_pet_toolbar_title">강아지 편집하기</string>
    <string name="register_pet_name_hint">강아지 이름을 입력해주세요</string>
    <string name="description_title">한 줄 소개</string>
    <string name="description_hint">한 줄 소개를 입력해주세요</string>
    <string name="camera_select_photo">카메라 실행하기</string>
    <string name="birthday_title">내 강아지가 태어난 달</string>
    <string name="birthday">%d년 %02d월</string>
    <string name="birthday_year">년</string>
    <string name="birthday_month">%02d월</string>
    <string name="neutralized_title">중성화했어요.</string>
    <string name="pet_size_type_title">강아지 사이즈</string>
    <string name="pet_add_image_title">강아지 사진을 추가하세요</string>
    <string name="pet_gender_type_title">강아지 성별</string>
    <string name="pet_submit_title">등록하기</string>
    <string name="bottom_sheet_pet_edit_birthday_title">언제 태어났나요?</string>
    <string name="pet_name_length">%d/20</string>
    <string name="bottom_home">홈</string>
    <string name="bottom_playground">놀이터</string>
    <string name="bottom_chat">채팅</string>
    <string name="bottom_my_page">나의 강아지</string>
    <string name="gallery_select_photo">앨범에서 사진 선택</string>
    <string name="default_image_set">기본 이미지로 변경</string>
    <string name="edit_profile_image_close">닫기</string>
    <string name="edit_profile_birthday_submit">확인</string>
    <string name="image_cropper_done">확인</string>
    <string name="club_user_list_subject">참여 견주</string>
    <string name="club_dog_list_subject">강아지들</string>
    <string name="club_select_dog_subject">내 강아지 선택</string>
    <string name="club_select_commit">선택완료</string>
    <string name="club_list_date_days">%d일 전</string>
    <string name="club_list_date_hours">%d시간 전</string>
    <string name="club_list_date_minutes">%d분 전</string>
    <string name="club_list_date_now">방금 전</string>
    <string name="club_counter_count">최대 %d명</string>
    <string name="club_list_participation_filter">모집 조건 선택</string>
    <string name="club_list_no_address_title">등록 된 주소가 없습니다</string>
    <string name="club_list_no_address_content">주소를 등록해야 모임을 볼 수 있어요</string>
    <string name="club_list_no_data_title">등록 된 모임이 없습니다.</string>
    <string name="club_list_no_data_content">관련 모임을 등록해 보세요</string>
    <string name="club_list_submit_text">등록하기</string>
    <string name="club_list_error_title">에러가 발생하였습니다</string>
    <string name="club_list_error_content">잠시 후에 다시 시도해주세요..</string>
    <string name="club_number_of_people">%d/%d</string>
    <string name="club_club_info">%s · %s</string>
    <string name="club_state_open">모집중</string>
    <string name="club_state_closed">모집종료</string>
    <string name="club_state_full">모집완료</string>
    <string name="dog_size_guide">소형: 10kg 미만\n중형: 25kg 미만\n대형: 25kg 이상</string>
    <string name="participation_guide">참여가능: 내 강아지가 참여 가능한 모임을 볼 수 있어요!</string>
    <string name="club_list_add_title">모임 생성하기</string>
    <string name="club_list_commit_btn">등록하기</string>
    <string name="club_list_next_btn">다음</string>
    <string name="club_list_prev_btn">이전</string>
    <string name="club_add_information_main_title">모임을 소개해주세요.</string>
    <string name="club_add_information_main_content">기준으로 모임이 생성돼요.</string>
    <string name="club_add_information_fail_address">모임 생성을 위해서 주소를 등록해주세요!</string>
    <string name="club_add_dog_size_title">강아지 사이즈 선택</string>
    <string name="club_add_dog_gender_title">강아지 성별 선택</string>
    <string name="club_add_club_title">모임 제목</string>
    <string name="club_add_club_number">참여 가능 인원</string>
    <string name="club_add_club_content">모임 소개</string>
    <string name="club_add_club">등록하기</string>
    <string name="club_add_club_subject_hint">모임명</string>
    <string name="club_add_content_hint">모임을 소개해주세요.</string>
    <string name="club_add_filter_main_title">모집할 강아지를 설정해주세요.</string>
    <string name="club_add_filter_main_content">사이즈와 성별을 선택할 수 있어요!</string>
    <string name="club_add_filter_all_select">누구나 가능해요!</string>
    <string name="club_add_detail_main_title">모임 정보를 입력해주세요</string>
    <string name="club_add_detail_main_content">모임 사진과 최대 인원을 설정해주세요 !</string>
    <string name="club_add_title_count">%d/100</string>
    <string name="club_add_content_count">%d/1000</string>
    <string name="club_add_fail">모임 생성에 실패하였습니다..</string>
    <string name="club_detail_fail_load">모임을 찾지 못했습니다.</string>
    <string name="club_detail_fail_button">뒤로가기</string>
    <string name="club_detail_participate_text">참여하기</string>
    <string name="club_detail_un_participate_text">모집종료</string>
    <string name="club_detail_mine_text">모임보기</string>
    <string name="club_detail_no_available_pet">참여 불가</string>
    <string name="club_detail_update">수정하기</string>
    <string name="club_detail_delete">방나가기</string>
    <string name="club_detail_report">신고하기</string>
    <string name="club_detail_block">차단하기</string>
    <string name="club_detail_delete_title">모임에서 나가겠습니까?</string>
    <string name="club_detail_participate_fail">모임에 참가하지 못하였습니다.</string>
    <string name="club_detail_delete_fail">방 나가기에 실패하였습니다.</string>
    <string name="club_detail_subject">모임 상세</string>
    <string name="club_modify_title">모임 수정하기</string>
    <string name="club_modify_commit">수정 완료</string>
    <string name="club_modify_recruitment">모집 여부</string>
    <string name="club_modify_fail">모임 수정에 실패하였습니다..</string>
    <string name="dog_selector_title">모임에 참여할 강아지를 선택해주세요.</string>
    <string name="dog_select_content">조건에 맞는 강아지만 선택할 수 있어요!</string>
    <string name="dog_select_prevent_message">%s은/는 모임에 참여할 수 없어요..</string>
    <string name="dog_select_load_fail">강아지를 등록해야 모임에 참여할 수 있어요!</string>
    <string name="dog_select_prevent_select">%s은/는 모임에 데려갈 수 없어요..</string>
    <string name="dog_select_can_select">%s은/는 모임에 데려갈 수 있어요!</string>
    <string name="chat_list_title">채팅</string>
    <string name="chat_send_hint_message">메세지 보내기</string>
    <string name="chat_time">a h:mm</string>
    <string name="chat_yesterday">어제</string>
    <string name="chat_date"> MM월 dd일</string>
    <string name="chat_unread_max_count">999+</string>
    <string name="chat_come_message">%s님이 들어왔습니다.</string>
    <string name="chat_out_message">%s님이 나갔습니다.</string>
    <string name="chat_setting">설정</string>
    <string name="chat_group_info">모임 정보</string>
    <string name="chat_group_dog_size">강아지 사이즈</string>
    <string name="chat_group_dog_gender">성별</string>
    <string name="chat_group_join_people">참여 중인 견주</string>
    <string name="chat_setting_alarm">채팅방 알림</string>
    <string name="chat_setting_alarm_alert">알림을 거부하여 채팅 알림을 받을 수 없습니다.</string>
    <string name="chat_mine">나</string>
    <string name="chat_leave_title">채팅방을 나가시겠어요?</string>
    <string name="chat_leave_positive">나가기</string>
    <string name="chat_leave_negative">머무르기</string>
    <string name="playground_permission">위치 권한이 필요합니다.</string>
    <string name="playground_setting">설정</string>
    <string name="playground_package">package:%s</string>
    <string name="playground_marker_registered">놀이터를 등록했어요!</string>
    <string name="playground_has_not_pet">강아지를 등록해야 놀이터에 참여할 수 있어요!</string>
    <string name="playground_age_year">%d살</string>
    <string name="pet_add_alert_title">강아지 등록</string>
    <string name="pet_add_alert_content">서비스 이용을 위해 강아지를 등록해주세요!</string>
    <string name="pet_add_alert_positive">등록하기</string>
    <string name="pet_add_alert_negative">다음에 하기</string>
</resources>