<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="vm"
            type="com.happy.friendogly.presentation.ui.club.list.ClubListViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/linear_layout_club_not_address"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/ic_no_adress" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            style="@style/Theme.AppCompat.TextView.Medium.Gray08.Size18"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/club_list_no_address_title" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="10dp" />

        <TextView
            style="@style/Theme.AppCompat.TextView.Medium.Gray05.Size16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/club_list_no_address_content" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_gray01_line_gray03_16">

            <TextView
                style="@style/Theme.AppCompat.TextView.Regular.Black.Size14"
                onSingleClick="@{()->vm.addMyLocation()}"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ripple_rect_fill16_white"
                android:paddingHorizontal="24dp"
                android:paddingVertical="8dp"
                android:text="@string/club_list_submit_text" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</layout>
