<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/sel_dialog_white_fill_20"
        android:padding="24dp">

        <TextView
            android:id="@+id/tv_alert_title"
            style="@style/Theme.AppCompat.TextView.SemiBold.Black.Size20"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/pet_add_alert_title" />

        <TextView
            android:layout_marginTop="10dp"
            android:id="@+id/tv_alert_content"
            style="@style/Theme.AppCompat.TextView.Regular.Gray08.Size16"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alert_title"
            android:text="@string/pet_add_alert_content" />

        <ImageView
            android:id="@+id/iv_alert_description"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_funny_dog"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_alert_content"
            tools:text="알림 설명" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/iv_alert_description"
            tools:layout_editor_absoluteX="24dp">

            <TextView
                android:id="@+id/tv_negative"
                style="@style/Theme.AppCompat.blue.Alert.TextView.Button.Negative"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:text="@string/pet_add_alert_negative"
                app:layout_constraintTop_toBottomOf="@+id/tv_alert_description"
                tools:layout_editor_absoluteX="24dp" />

            <TextView
                android:id="@+id/tv_positive"
                style="@style/Theme.AppCompat.coral.Alert.TextView.Button.Positive"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/pet_add_alert_positive"
                app:layout_constraintTop_toBottomOf="@+id/tv_alert_description"
                tools:layout_editor_absoluteX="24dp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
